# Windup-Wizards

./: .gitignore  Main.tscn  README.md  auto_butler.bat  default_bus_layout.tres  export_presets.cfg  new_default_env.tres  project.godot
admob-lib/: admob.gd
assets/: boot_splash.png.import  general_ui.png.import  input_tutorials.png.import  tutorials.png.import
assets/audio/: activate.ogg.import  add_stack.ogg.import  convert.ogg.import  destruct.ogg.import  game_loss.ogg.import  game_win.ogg.import  gust_of_wind.aup  gust_of_wind.ogg.import  invert.ogg.import  knob_turn_1.ogg.import  knob_turn_2.ogg.import  knob_turn_3.ogg.import  knob_turn_4.ogg.import  loose_knob.ogg.import  magnet_attract.ogg.import  magnet_repel.ogg.import  player_move.aup  (+6 more)
data/: b.json  c.json  data.json  data2.json  structure.json
materials/: Material.material  MaterialGrayed.material  extruded_number.tres  extruded_number_grayed.tres  grid.tres  knob_invert.res
non_game/: Marketing.afdesign  Textures.afdesign  Tutorials.afdesign  UI.afdesign  WindupWizards-Mockup.afdesign  [Devlog] Windup Wizards.md  [GoGodotJam] Ideas.md  [Idea] Windup Wizards.md  devlog.md
particles/: win_particles.tscn
scenes/: entity.tscn  feedback.tscn  knob.tscn  loose_knob.tscn  player_gust.tscn  technical_settings.tscn  technical_settings_module.tscn  tutorial.tscn
scripts/: ad_manager.gd  camera.gd  commands.gd  entity.gd  feedback.gd  game_over.gd  input.gd  main.gd  map.gd  state.gd  tutorial.gd  win_particles.gd
simulation/windupwizards/: Cargo.toml
simulation/windupwizards/src/: main.rs
(+325 files in other folders)
