[package]
name = "windupwizards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_seeder = "0.2.0"
rand_pcg = "0.3.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"